[package]
edition = "2018"
name = "simple"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
x264 = { version = "0.1.0", git = "https://github.com/rust-av/x264-rs" }
